# sensors-toolkit

./: CMakeLists.txt
cmake/Modules/: SuperBuildDepends.cmake
libsensors/: CMakeLists.txt
libsensors/include/: libsensors.h
libsensors/src/: libsensors.cpp
sensors-pc/: CMakeLists.txt
sensors-pc/sensors-decode/: main.cpp
sensors-pc/sensors-from-dior/: dior.h  main.cpp
sensors-pc/sensors-preview/: main.cpp
sensors-pc/sensors-sort/: main.cpp
